--- a/style/style.scss
+++ b/style/style.scss
@@ -12,64 +12,149 @@ body {
     font-family: 'Helvetica Neue', sans-serif;
     font-size: 14px;
 
-    .header {
-        padding-top: 2.5em;
-        width: 100%;
-        height: 25em;
-        background-color: $primary-color;
-        color: #fff ;
-        clip-path: polygon(0% 0, 100% 0, 100% 100%, 0% 65%);
-        text-align: center;
+}
 
-        .navbar {
+.header {
+    width: 100%;
+    height: 25em;
+    background-color: $primary-color;
+    color: #fff ;
+    clip-path: polygon(0% 0, 100% 0, 100% 95%, 0% 62%);
+    text-align: center;
+
+    .navbar {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+
+        .navlist {
             display: flex;
-            flex-direction: row;
+            flex-flow: wrap row;
             justify-content: center;
             align-items: center;
+            list-style: none;
+            
 
-            .navlist {
-                display: flex;
-                flex-flow: wrap row;
-                justify-content: center;
-                align-items: center;
-                list-style: none;
+            .navButtons {
+                margin: 0 24px;
+                padding: 10px 14px;
+                background-color: #fff; 
+                text-align: center;
+                border-radius: 5px;
+                box-shadow: 0 0 0 1px #fff;
                 
+                &:hover {
+                    box-shadow: none;
+                    cursor: pointer;
+                }
 
-                .navButtons {
-                    margin: 0 24px;
-                    padding: 10px 14px;
-                    background-color: #fff; 
-                    
-                    text-align: center;
-                    border-radius: 5px;
-                    box-shadow: 0 0 0 1px #fff;
-                    
-                    &:hover {
-                        box-shadow: none;
-                    }
+                &:hover a {
+                    color: aqua;
+                }
 
-                    a {
-                        text-decoration: none;
-                        cursor: pointer;
-                        color: $secondary-color;
-                    }
+                a {
+                    text-decoration: none;
+                    color: $secondary-color;
                 }
 
             }
+
+        }
+    }
+
+    p {
+        padding-top: 1em;
+        font-size: 20px;
+    }
+
+    h1 {
+        font-size: 40px;
+        margin-bottom: 20px;
+    }
+
+    .slogan {
+        font-size: 14px;
+        margin-bottom: 40px;
+    }
+}
+
+.algorithmHelp {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 1em auto;
+    
+
+    .help {
+        width: 50vw;
+        height: 13em;
+        padding-right: 3.5em;
+        margin-top: 22px;
+
+        h2 {
+            font-size: 20px;
+            color: $secondary-color;
+            margin-bottom: 1.5em;
         }
 
         p {
-            font-size: 20px;
+            font-size: 12px;
+            color: $secondary-color;
+            margin-bottom: 1.5em;
+            line-height: 20px;
+
+        }
+    }
+
+    .form1 {
+        width: 30vw;
+        /* height: 22em; */
+
+        div {
+            display: flex;
+            flex-direction: row;
+            margin: 1.5em 0;
+
+            label {
+                display: flex;
+                flex-direction: column;
+                width: 340px;
+                font-size: 12px;
+                color: $secondary-color;
+                
+                input {
+                    height: 30px;
+                    border: solid 1px $primary-color;
+                    margin-top: 7px
+                }
+            }
         }
 
-        h1 {
-            font-size: 40px;
-            margin-bottom: 20px;
+        .selection {
+            display: flex;
+            flex-direction: row;
+
+            input {
+                width: 14px;
+                margin-right: 5px;
+            }
+
         }
 
-        .slogan {
-            font-size: 14px;
-            margin-bottom: 40px;
+        button {
+            width: 340px;
+            height: 39px;
+            cursor: pointer;
+            background-color: #fff;
+            border: solid 1px $primary-color;
+
+            &:hover {
+                background-color: $primary-color;
+                color: #fff;
+            }
         }
     }
 }
+
+
