--- a/style/style.scss
+++ b/style/style.scss
@@ -22,6 +22,12 @@ body {
     clip-path: polygon(0% 0, 100% 0, 100% 95%, 0% 62%);
     text-align: center;
 
+    .content {
+        display: flex;
+        flex-flow: wrap column;
+
+    }
+
     .navbar {
         display: flex;
         flex-direction: row;
@@ -30,7 +36,6 @@ body {
 
         .navlist {
             display: flex;
-            flex-flow: wrap row;
             justify-content: center;
             align-items: center;
             list-style: none;
@@ -50,8 +55,8 @@ body {
                 }
 
                 &:hover a {
-                    color: aqua;
-                }
+                    border-bottom: 1px solid $secondary-color;
+                }               
 
                 a {
                     text-decoration: none;
@@ -157,4 +162,22 @@ body {
     }
 }
 
+.footer {
+    width: 100%;
+    height: 20em;
+    background-color: $primary-color;
+    
+    clip-path: polygon(0% 10%, 100% 40%, 100% 100%, 0% 100%);
+    text-align: center;
+    position: absolute;
 
+    .footerText {
+        position: relative;
+        bottom: -60%;
+        left: -50%;
+        transform: translate(50%, 40%);
+        color: #fff
+    }
+
+    
+}
