--- a/style/style.css
+++ b/style/style.css
@@ -73,7 +73,7 @@ body {
   margin: 1em auto;
 }
 .algorithmHelp .help {
-  width: 50vw;
+  width: 45vw;
   height: 13em;
   padding-right: 3.5em;
   margin-top: 22px;
@@ -101,12 +101,12 @@ body {
 .algorithmHelp .form1 div label {
   display: flex;
   flex-direction: column;
-  width: 340px;
   font-size: 12px;
   color: #888888;
 }
 .algorithmHelp .form1 div label input {
-  height: 30px;
+  width: 25vw;
+  height: 4.5vh;
   border: solid 1px #707070;
   margin-top: 7px;
 }
@@ -114,18 +114,85 @@ body {
   display: flex;
   flex-direction: row;
 }
+.algorithmHelp .form1 .selection #fem {
+  margin-left: 1vw;
+}
 .algorithmHelp .form1 .selection input {
   width: 14px;
-  margin-right: 5px;
+  margin-right: 1vw;
 }
 .algorithmHelp .form1 button {
+  width: 25vw;
+  height: 5vh;
+  cursor: pointer;
+  background-color: #fff;
+  border: solid 1px #707070;
+}
+.algorithmHelp .form1 button:hover {
+  background-color: #707070;
+  color: #fff;
+}
+
+.news {
+  display: flex;
+  justify-content: center;
+  flex-flow: wrap column;
+  align-items: center;
+  margin: 25vh auto 10vh auto;
+}
+.news h3 {
+  margin-bottom: 6vh;
+  font-size: 18px;
+  color: #888888;
+  text-align: center;
+}
+.news p {
+  margin-bottom: 4vh;
+  font-size: 14px;
+  color: #888888;
+  margin-bottom: 1.5em;
+  line-height: 20px;
+}
+.news #formShare {
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+}
+.news #formShare .form2 {
+  display: flex;
+  margin-bottom: 5vh;
+  width: 70vw;
+  justify-content: space-around;
+}
+.news #formShare .form2 div {
+  display: flex;
+  flex-direction: row;
+  margin: 1.5em 0;
+}
+.news #formShare .form2 div label {
+  display: flex;
+  flex-direction: column;
+  font-size: 12px;
+  color: #888888;
+}
+.news #formShare .form2 div label input {
+  width: 25vw;
+  height: 4.5vh;
+  border: solid 1px #707070;
+  margin-top: 7px;
+}
+.news #formShare button {
+  width: 20vw;
+  height: 7vh;
+  color: #888888;
+  font-size: 16px;
   width: 340px;
   height: 39px;
   cursor: pointer;
   background-color: #fff;
   border: solid 1px #707070;
 }
-.algorithmHelp .form1 button:hover {
+.news #formShare button:hover {
   background-color: #707070;
   color: #fff;
 }
