--- a/style/style.scss
+++ b/style/style.scss
@@ -92,7 +92,7 @@ body {
     
 
     .help {
-        width: 50vw;
+        width: 45vw;
         height: 13em;
         padding-right: 3.5em;
         margin-top: 22px;
@@ -124,12 +124,12 @@ body {
             label {
                 display: flex;
                 flex-direction: column;
-                width: 340px;
                 font-size: 12px;
                 color: $secondary-color;
                 
                 input {
-                    height: 30px;
+                    width: 25vw;
+                    height: 4.5vh;
                     border: solid 1px $primary-color;
                     margin-top: 7px
                 }
@@ -140,16 +140,20 @@ body {
             display: flex;
             flex-direction: row;
 
+            #fem {
+                margin-left: 1vw;
+            }
+
             input {
                 width: 14px;
-                margin-right: 5px;
+                margin-right: 1vw;
             }
 
         }
 
         button {
-            width: 340px;
-            height: 39px;
+            width: 25vw;
+            height: 5vh;
             cursor: pointer;
             background-color: #fff;
             border: solid 1px $primary-color;
@@ -161,6 +165,86 @@ body {
         }
     }
 }
+
+.news {
+    display: flex;
+    justify-content: center;
+    flex-flow: wrap column;
+    align-items: center;
+    margin: 25vh auto 10vh auto;
+
+    h3 {
+        margin-bottom: 6vh;
+        font-size: 18px;
+        color: $secondary-color;
+        text-align: center;
+         
+    }
+
+    p {
+        margin-bottom: 4vh;
+        font-size: 14px;
+        color: $secondary-color;
+        margin-bottom: 1.5em;
+        line-height: 20px;
+    }
+
+    #formShare {
+
+        display: flex;
+        flex-flow: column wrap;
+        align-items: center;
+
+        .form2 {
+            display: flex;
+            margin-bottom: 5vh;
+            width: 70vw;
+            justify-content: space-around;
+    
+            div {
+                display: flex;
+                flex-direction: row;
+                margin: 1.5em 0;
+    
+                label {
+                    display: flex;
+                    flex-direction: column;
+                    font-size: 12px;
+                    color: $secondary-color;
+                    
+                    input {
+                        width: 25vw;
+                        height: 4.5vh;
+                        border: solid 1px $primary-color;
+                        margin-top: 7px
+                    }
+                }
+
+            }
+    
+        }
+
+        button {
+            width: 20vw;
+            height: 7vh;
+            color: $secondary-color;
+            font-size: 16px;
+            width: 340px;
+            height: 39px;
+            cursor: pointer;
+            background-color: #fff;
+            border: solid 1px $primary-color;
+    
+            &:hover {
+                background-color: $primary-color;
+                color: #fff;
+            }
+        }
+
+    }
+
+}
+
 
 .footer {
     width: 100%;
