--- a/style/style.scss
+++ b/style/style.scss
@@ -166,6 +166,41 @@ body {
     }
 }
 
+.specialSelection {
+    height: 100vh;
+    margin-top: 10vh;
+
+    .special {
+        text-align: center;
+        margin-bottom: 6vh;
+
+    h3 {
+        font-size: 18px;
+        color: $secondary-color;
+        
+
+        &:before, &:after {
+            content: ' ';
+            position: absolute;
+            width: 25%;
+            border-top: 1px solid $secondary-color;
+            margin-top: 1vh;
+        }
+
+        &:before {
+            margin-left: -355px;
+        }
+
+        &:after {
+            margin-left: 15px;
+        }
+         
+    }
+
+}
+
+}
+
 .news {
     display: flex;
     justify-content: center;
@@ -173,13 +208,36 @@ body {
     align-items: center;
     margin: 25vh auto 10vh auto;
 
-    h3 {
-        margin-bottom: 6vh;
-        font-size: 18px;
-        color: $secondary-color;
-        text-align: center;
-         
+    .share {
+            text-align: center;
+            margin-bottom: 6vh;
+
+        h3 {
+            font-size: 18px;
+            color: $secondary-color;
+            
+
+            &:before, &:after {
+                content: ' ';
+                position: absolute;
+                width: 25%;
+                border-top: 1px solid $secondary-color;
+                margin-top: 1vh;
+            }
+    
+            &:before {
+                margin-left: -345px;
+            }
+    
+            &:after {
+                margin-left: 5px;
+            }
+             
+        }
+
     }
+
+
 
     p {
         margin-bottom: 4vh;
