--- a/style/style.css
+++ b/style/style.css
@@ -135,7 +135,7 @@ body {
 
 .specialSelection {
   height: 100vh;
-  margin-top: 10vh;
+  margin: 2em auto;
 }
 .specialSelection .special {
   text-align: center;
@@ -157,6 +157,53 @@ body {
 }
 .specialSelection .special h3:after {
   margin-left: 15px;
+}
+.specialSelection .boxes {
+  display: flex;
+  justify-content: center;
+  padding: 15px 150px;
+  flex-wrap: row wrap;
+}
+.specialSelection .boxes .box {
+  display: flex;
+  padding: 10px 0;
+  margin: 30px;
+  flex-flow: column wrap;
+  align-content: flex-start;
+  justify-content: center;
+  color: #888888;
+  text-align: left;
+}
+.specialSelection .boxes .box img {
+  width: 150px;
+}
+.specialSelection .boxes .box h4 {
+  margin: 0.5em 0;
+  font-size: 14px;
+  font-weight: 100;
+}
+.specialSelection .boxes .box p {
+  font-size: 12px;
+  margin-top: 0.5em;
+}
+.specialSelection .boxes .box p:nth-child(4) {
+  font-size: 16px;
+  font-weight: bold;
+  margin-top: 1em;
+}
+.specialSelection .boxes .box button {
+  margin-top: 1em;
+  width: 12em;
+  height: 4vh;
+  color: #888888;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: #fff;
+  border: solid 1px #707070;
+}
+.specialSelection .boxes .box button:hover {
+  background-color: #707070;
+  color: #fff;
 }
 
 .news {
@@ -227,8 +274,6 @@ body {
   height: 7vh;
   color: #888888;
   font-size: 16px;
-  width: 340px;
-  height: 39px;
   cursor: pointer;
   background-color: #fff;
   border: solid 1px #707070;
