--- a/style/style.scss
+++ b/style/style.scss
@@ -11,7 +11,6 @@ $terciary-color: #00000029;
 body {
     font-family: 'Helvetica Neue', sans-serif;
     font-size: 14px;
-
 }
 
 .header {
@@ -168,36 +167,94 @@ body {
 
 .specialSelection {
     height: 100vh;
-    margin-top: 10vh;
+    margin: 2em auto;
 
     .special {
         text-align: center;
         margin-bottom: 6vh;
 
-    h3 {
-        font-size: 18px;
-        color: $secondary-color;
-        
+        h3 {
+            font-size: 18px;
+            color: $secondary-color;
+            
 
-        &:before, &:after {
-            content: ' ';
-            position: absolute;
-            width: 25%;
-            border-top: 1px solid $secondary-color;
-            margin-top: 1vh;
+            &:before, &:after {
+                content: ' ';
+                position: absolute;
+                width: 25%;
+                border-top: 1px solid $secondary-color;
+                margin-top: 1vh;
+            }
+
+            &:before {
+                margin-left: -355px;
+            }
+
+            &:after {
+                margin-left: 15px;
+            }
+            
         }
 
-        &:before {
-            margin-left: -355px;
-        }
-
-        &:after {
-            margin-left: 15px;
-        }
-         
     }
 
-}
+    .boxes {
+        display: flex;
+        justify-content: center;
+        padding: 15px 150px;
+        flex-wrap: row wrap;
+
+        .box {
+            display: flex;
+            padding: 10px 0;
+            margin: 30px;
+            flex-flow: column wrap;
+            align-content: flex-start;
+            justify-content: center;
+            color: $secondary-color;
+            text-align: left; 
+
+            img {
+                width: 150px;
+            }
+
+            h4 {
+                margin: 0.5em 0;
+                font-size: 14px;
+                font-weight: 100;
+                
+            }
+
+            p {
+                font-size: 12px;
+                margin-top: 0.5em;
+
+                &:nth-child(4) {
+                    font-size: 16px;
+                    font-weight: bold;
+                    margin-top: 1em;
+                }
+            }
+               
+            button {
+                margin-top: 1em;
+                width: 12em;
+                height: 4vh;
+                color: $secondary-color;
+                font-size: 16px;
+                cursor: pointer;
+                background-color: #fff;
+                border: solid 1px $primary-color;
+        
+                &:hover {
+                    background-color: $primary-color;
+                    color: #fff;
+                }
+            
+            }
+        }
+
+    }
 
 }
 
@@ -287,8 +344,6 @@ body {
             height: 7vh;
             color: $secondary-color;
             font-size: 16px;
-            width: 340px;
-            height: 39px;
             cursor: pointer;
             background-color: #fff;
             border: solid 1px $primary-color;
@@ -302,7 +357,6 @@ body {
     }
 
 }
-
 
 .footer {
     width: 100%;
