--- a/style/style.scss
+++ b/style/style.scss
@@ -11,30 +11,46 @@ $terciary-color: #00000029;
 body {
     font-family: 'Helvetica Neue', sans-serif;
     font-size: 14px;
+
+    .container {
+        width: 1100px;;
+        margin: 0 auto;
+    }
 }
 
 .header {
+    display: flex;
+    flex-wrap: wrap;
     width: 100%;
-    height: 25em;
+    height: 30em;
     background-color: $primary-color;
     color: #fff ;
-    clip-path: polygon(0% 0, 100% 0, 100% 95%, 0% 62%);
+    clip-path: polygon(0% 0, 100% 0, 100% 100%, 0% 65%);
     text-align: center;
 
-    .content {
-        display: flex;
-        flex-flow: wrap column;
+    p {
+        padding: 1em;
+        font-size: 20px;
+    }
 
+    h1 {
+        font-size: 40px;
+    }
+
+    .slogan {
+        font-size: 14px;
+        padding: 5vh;
     }
 
     .navbar {
         display: flex;
-        flex-direction: row;
+        flex-flow: row wrap;
         justify-content: center;
         align-items: center;
 
         .navlist {
             display: flex;
+            flex-flow: row wrap;
             justify-content: center;
             align-items: center;
             list-style: none;
@@ -42,7 +58,7 @@ body {
 
             .navButtons {
                 margin: 0 24px;
-                padding: 10px 14px;
+                padding: 2.5vh 1.5vw;
                 background-color: #fff; 
                 text-align: center;
                 border-radius: 5px;
@@ -67,27 +83,19 @@ body {
         }
     }
 
-    p {
-        padding-top: 1em;
-        font-size: 20px;
-    }
-
-    h1 {
-        font-size: 40px;
-        margin-bottom: 20px;
-    }
-
-    .slogan {
-        font-size: 14px;
-        margin-bottom: 40px;
-    }
+    
 }
 
 .algorithmHelp {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin: 1em auto;
+
+    .container {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        margin: 2em auto;
+
+    }
+    
     
 
     .help {
@@ -166,8 +174,7 @@ body {
 }
 
 .specialSelection {
-    height: 100vh;
-    margin: 2em auto;
+    margin-top: 10em;
 
     .special {
         text-align: center;
@@ -200,9 +207,13 @@ body {
 
     .boxes {
         display: flex;
-        justify-content: center;
-        padding: 15px 150px;
-        flex-wrap: row wrap;
+        flex-flow: column wrap;
+        width: 20vw;
+        height: 100vh;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-between;
+        align-content: space-between;
 
         .box {
             display: flex;
@@ -263,7 +274,7 @@ body {
     justify-content: center;
     flex-flow: wrap column;
     align-items: center;
-    margin: 25vh auto 10vh auto;
+    margin-top: 25vh;
 
     .share {
             text-align: center;
@@ -331,7 +342,7 @@ body {
                         width: 25vw;
                         height: 4.5vh;
                         border: solid 1px $primary-color;
-                        margin-top: 7px
+                        margin-top: 2vh;
                     }
                 }
 
@@ -362,7 +373,7 @@ body {
     width: 100%;
     height: 20em;
     background-color: $primary-color;
-    
+    margin-top: 10em;
     clip-path: polygon(0% 10%, 100% 40%, 100% 100%, 0% 100%);
     text-align: center;
     position: absolute;
