--- a/style/style.scss
+++ b/style/style.scss
@@ -151,7 +151,7 @@ body {
             display: flex;
             flex-direction: row;
 
-            #fem {
+            .fem {
                 margin-left: 1vw;
             }
 
