--- a/style/style.css
+++ b/style/style.css
@@ -12,6 +12,10 @@ body .container {
   width: 1100px;
   margin: 0 auto;
 }
+body .error {
+  color: red;
+  margin-top: 0.5em;
+}
 
 .header {
   width: 100%;
