--- a/style/style.scss
+++ b/style/style.scss
@@ -16,6 +16,11 @@ body {
         width: 1100px;;
         margin: 0 auto;
     }
+
+    .error {
+        color: red;
+        margin-top: 0.5em;
+    }
 }
 
 .header {
