--- a/style/style.scss
+++ b/style/style.scss
@@ -219,10 +219,8 @@ body {
     
         }
     
-        .boxes {
+        #boxes {
             display: flex;
-            width: 19vw;
-            height: 150vh;
             flex-flow: column wrap;
             flex-direction: column;
             flex-wrap: wrap;
@@ -281,8 +279,21 @@ body {
     
         }
 
+        .beforeForm {
+            width: 19vw;
+            height: auto;
+
+        }
+
+        .afterForm {
+            width: 19vw;
+            height: 150vh;
+        }
+
         #btnNewPage {
-            display: block;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             position: absolute;
             transform: translate(-50%, 100%);
             bottom: 0%;
@@ -297,19 +308,6 @@ body {
             background-color: #fff;
             border: solid 1px $primary-color;
             transition: ease-in-out 300ms;
-            
-            a {
-                text-decoration: none;
-                text-align: center;
-                color: $secondary-color;
-                font-size: 16px;
-                transition: ease-in-out 300ms;
-
-                &:hover {
-                    background-color: $primary-color;
-                    color: #fff;
-                }
-            }
     
             &:hover {
                 background-color: $primary-color;
